Убраны лишние зависимости Redis/celery
